# BrickGame

./: README.md
src/: Makefile  doc.html
src/brick_game/snake/: controller.cc  controller.h  defines.h  model.cc  model.h
src/brick_game/tetris/: fsm.c  fsm.h  objects.h  tetris.c  tetris.h
src/gui/cli/: main.cc
src/gui/cli/snake/: consoleView.cc  consoleView.h  snake_game.cc  snake_game.h
src/gui/cli/tetris/: frontend.c  frontend.h  input.c  input.h  tetris_game.c  tetris_game.h
src/gui/desktop/: CMakeLists.txt  gamewidgetmenu.cpp  gamewidgetmenu.h  gamewidgetsnake.cpp  gamewidgetsnake.h  gamewidgettetris.cpp  gamewidgettetris.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/tests/snake_tests/: controller_test.cc  model_test.cc  tests.cc  tests.h
src/tests/tetris_tests/: tests.c  tests.h  tetris_fsm.c  tetris_functions.c
